Add Osculating orbit section to technical report

--- a/docs/technical-reports/mxd-basic-concepts/mxd-basic-concepts.tex
+++ b/docs/technical-reports/mxd-basic-concepts/mxd-basic-concepts.tex
@@ -5,8 +5,8 @@
 
 \newcommand{\mxd}{\texttt{mxd}}
 
-\title{\mxd\\Basic Conceps}
-\author{F.~Ayala and D.~Rockensahn and J.~Arrieta}
+\title{\mxd\\Basic Concepts}
+\author{F.~Ayala and D.~Rockenzahn and J.~Arrieta}
 \date{Dec 08, 2018\\\small{Last Update:~\today}}
 
 \begin{document}
@@ -24,7 +24,7 @@ The Cartesian elements are
 They define position and velocity at a given time.
 
 \subsection{Keplerian Elements}
-The Keplerian elements are.
+The Keplerian elements are
 \begin{align}
   a, e, i, \omega, \Omega, f(t).
 \end{align}
@@ -32,8 +32,12 @@ They define semimajor axis, eccentricity, inclination, right ascension of the
 ascending node, argument of periapsis, and true anomaly. Notice that only true
 anomaly varies with time.
 
-TODO: Explain what is an osculating orbit.
+In order for the previously mentioned elements to correctly describe an orbit, it must meet two conditions: The orbit must be osculating, and elliptical.
 
+\paragraph{Osculating Orbits}
+An orbit is said to be osculating if the orbiting body has only one attractor, without the preturbation of any other gravitational force force, and thus follows a kepler orbit.
+
+\paragraph{Elliptical orbits}  
 TODO: Explain why the given elements only apply to elliptical (non-circular,
 non-parabolic, non-hyperbolic) orbits.
 
